--- a/templates/home.html
+++ b/templates/home.html
@@ -14,9 +14,11 @@
     <button> Contact us </button>
 
     {% comment %} acessing dynamic value {% endcomment %}
-    
-    <h2> Today Date is:{{date}}
-    </h2>
+    {% if isActive%}
+    <div>
+    </h1> Today Date is:{{date}}
+  </h1>
+  
   <h1>
     Username is: {{name}}
   </h1>
@@ -25,7 +27,17 @@
   <h2> Student name: {{student_data.student_name}}</h2>
   <h2> Student college : {{student_data.student_college}}</h2>
   <h2> Student City : {{student_data.student_city}}</h2>
- </hr>
+  <hr>
+  <h1>
+    Favorite programs
+  </h1>
+  {% for p in list_of_programs %}
+  <h3> {{p}} </h3>
+
+  {% endfor %} 
+    </div>
+    {% endif %}
+ 
   </div>
 </body>
 </html>
