--- a/momohub/templates/website/index.html
+++ b/momohub/templates/website/index.html
@@ -1,11 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MomoHub</title>
+    <link rel="stylesheet" href= "{% static 'style.css' %}">
 </head>
 <body>
  <h1> THIS IS MomoHub OFFICIAL SITE </h1>
+
+
 </body>
 </html>
