--- a/momohub/momo/templates/momo/all_momo.html
+++ b/momohub/momo/templates/momo/all_momo.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Momo</title>
-</head>
-<body>
-  <h1> All types of available momo</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block  title%}
+Momohub Page
+{% endblock  %}
+
+{% block  content%}
+<h1>All momo spots that might interest you</h1>
+{% endblock  %}
