--- a/momohub/templates/website/index.html
+++ b/momohub/templates/website/index.html
@@ -1,15 +1,9 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MomoHub</title>
-    <link rel="stylesheet" href= "{% static 'style.css' %}">
-</head>
-<body>
- <h1> THIS IS MomoHub OFFICIAL SITE </h1>
+{% extends "layout.html" %}
 
+{% block  title%}
+Home Page
+{% endblock  %}
 
-</body>
-</html>
+{% block  content%}
+<h1>Momohub | Homepage</h1>
+{% endblock  %}
