--- a/momohub/templates/website/index.html
+++ b/momohub/templates/website/index.html
@@ -5,5 +5,7 @@ Home Page
 {% endblock  %}
 
 {% block  content%}
-<h1>Momohub | Homepage</h1>
+<h1 class = "bg-red-500 text-3xl">Momohub | Homepage</h1>
+
+
 {% endblock  %}
