--- a/momohub/templates/website/index.html
+++ b/momohub/templates/website/index.html
@@ -6,6 +6,7 @@ Home Page
 
 {% block  content%}
 <h1 class = "bg-red-500 text-3xl">Momohub | Homepage</h1>
-
+<p class="text-center w-20 bg-orange-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam doloremque dicta veritatis facilis quo
+</p>
 
 {% endblock  %}
